First changes to add group's messages